--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,26 @@
+@incollection{smith1971origin,
+  title={The origin and maintenance of sex},
+  author={Smith, J Maynard},
+  ALTeditor = 	 {William, G.C.},
+  booktitle={Group selection},
+  pages={163--175},
+  year={1971},
+  publisher={Routledge}
+}
+
+
+
+@article{roberts2009sexual,
+  title={Sexual conflict resolved by invasion of a novel sex determiner in Lake Malawi cichlid fishes},
+  author={Roberts, Reade B and Ser, Jennifer R and Kocher, Thomas D},
+  journal={Science},
+  volume={326},
+  number={5955},
+  pages={998--1001},
+  year={2009},
+  publisher={American Association for the Advancement of Science}
+}
+
 
 @article{lande1983measurement,
   title={The measurement of selection on correlated characters},
@@ -7,6 +30,60 @@
   number={6},
   pages={1210--1226},
   year={1983},
+  publisher={Wiley Online Library}
+}
+
+@article{vermeij1982phenotypic,
+  title={Phenotypic evolution in a poorly dispersing snail after arrival of a predator},
+  author={Vermeij, Geerat J},
+  journal={Nature},
+  volume={299},
+  number={5881},
+  pages={349},
+  year={1982},
+  publisher={Nature Publishing Group}
+}
+
+@article{colbert1948evolution,
+  title={Evolution of the horned dinosaurs},
+  author={Colbert, Edwin H},
+  journal={Evolution},
+  volume={2},
+  number={2},
+  pages={145--163},
+  year={1948},
+  publisher={Wiley Online Library}
+}
+
+@article{uyeda2011million,
+  title={The million-year wait for macroevolutionary bursts},
+  author={Uyeda, Josef C and Hansen, Thomas F and Arnold, Stevan J and Pienaar, Jason},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={108},
+  number={38},
+  pages={15908--15913},
+  year={2011},
+  publisher={National Acad Sciences}
+}
+
+@article{gingerich1983rates,
+  title={Rates of evolution: effects of time and temporal scaling},
+  author={Gingerich, Philip},
+  journal={Science},
+  volume={222},
+  pages={159--162},
+  year={1983},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{haldane1949suggestions,
+  title={Suggestions as to quantitative measurement of rates of evolution},
+  author={Haldane, John Burdon Sanderson},
+  journal={Evolution},
+  volume={3},
+  number={1},
+  pages={51--56},
+  year={1949},
   publisher={Wiley Online Library}
 }
 
