--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,7 +8,16 @@
   publisher={Routledge}
 }
 
-
+@article{grant1995predicting,
+  title={Predicting microevolutionary responses to directional selection on heritable variation},
+  author={Grant, Peter R and Grant, B Rosemary},
+  journal={Evolution},
+  volume={49},
+  number={2},
+  pages={241--251},
+  year={1995},
+  publisher={Wiley Online Library}
+}
 
 @article{roberts2009sexual,
   title={Sexual conflict resolved by invasion of a novel sex determiner in Lake Malawi cichlid fishes},
