--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -191,6 +191,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/genetic_drift_pop_structure}
 \include{Chapters/Pheno_var}
 \include{Chapters/Response_to_sel}
+\include{Chapters/Multi_trait_selection}
 \include{Chapters/One_locus_selection}
 \include{Chapters/Interaction_selection_mut_mig}
 \include{Chapters/Genetic_drift_selection}
