updated fig position

--- a/math_background/Math-background.tex
+++ b/math_background/Math-background.tex
@@ -180,7 +180,7 @@ location of the car from its speed {\emph and} acceleration.
 
 One place this second order approximation is useful is for the $\log$ function and yields
 \begin{equation}
-\log(1+x)\approx x-x^2/2 \mbox{ for $x$ near $0$}.
+\log(1+x)\approx x-x^2/2 \mbox{ for $x$ near $0$}.  \label{eqn:Taylor_log_2nd} 
 \end{equation}
 
 
