--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,17 @@
   publisher={Routledge}
 }
 
+@article{hughes2008ancestral,
+  title={Ancestral monogamy shows kin selection is key to the evolution of eusociality},
+  author={Hughes, William OH and Oldroyd, Benjamin P and Beekman, Madeleine and Ratnieks, Francis LW},
+  journal={Science},
+  volume={320},
+  number={5880},
+  pages={1213--1216},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{grant1995predicting,
   title={Predicting microevolutionary responses to directional selection on heritable variation},
   author={Grant, Peter R and Grant, B Rosemary},
