updated one locus

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,18 @@
   publisher={Routledge}
 }
 
+@article{oziolor2019adaptive,
+  title={Adaptive introgression enables evolutionary rescue from extreme environmental pollution},
+  author={Oziolor, Elias M and Reid, Noah M and Yair, Sivan and Lee, Kristin M and VerPloeg, Sarah Guberman and Bruns, Peter C and Shaw, Joseph R and Whitehead, Andrew and Matson, Cole W},
+  journal={Science},
+  volume={364},
+  number={6439},
+  pages={455--457},
+  year={2019},
+  publisher={American Association for the Advancement of Science}
+}
+
+
 @article{hughes2008ancestral,
   title={Ancestral monogamy shows kin selection is key to the evolution of eusociality},
   author={Hughes, William OH and Oldroyd, Benjamin P and Beekman, Madeleine and Ratnieks, Francis LW},
