--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -98,6 +98,17 @@
   publisher={National Acad Sciences}
 }
 
+@article{muller1964relation,
+  title={The relation of recombination to mutational advance},
+  author={Muller, Hermann Joseph},
+  journal={Mutation Research/Fundamental and Molecular Mechanisms of Mutagenesis},
+  volume={1},
+  number={1},
+  pages={2--9},
+  year={1964},
+  publisher={Elsevier}
+}
+
 @article{gingerich1983rates,
   title={Rates of evolution: effects of time and temporal scaling},
   author={Gingerich, Philip},
