Added Pooh bee quote

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -98,6 +98,13 @@
   publisher={National Acad Sciences}
 }
 
+@book{milne,
+  title={ Winnie-the-Pooh},
+  author={Milne, Alan Alexander and Shepard, Ernest Howard},
+  year=1926},
+  publisher={Penguin}
+}
+
 @article{muller1964relation,
   title={The relation of recombination to mutational advance},
   author={Muller, Hermann Joseph},
