--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,17 @@
   publisher={Routledge}
 }
 
+@article{klinka2009adaptive,
+  title={Adaptive coat colour polymorphism in the Kermode bear of coastal British Columbia},
+  author={Klinka, Dan R and Reimchen, Thomas E},
+  journal={Biological Journal of the Linnean Society},
+  volume={98},
+  number={3},
+  pages={479--488},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
 @article{oziolor2019adaptive,
   title={Adaptive introgression enables evolutionary rescue from extreme environmental pollution},
   author={Oziolor, Elias M and Reid, Noah M and Yair, Sivan and Lee, Kristin M and VerPloeg, Sarah Guberman and Bruns, Peter C and Shaw, Joseph R and Whitehead, Andrew and Matson, Cole W},
