--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -186,6 +186,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\newpage
 \include{Chapters/intro}
 \include{Chapters/chapter-01}
+\include{Chapters/Population_structure}
 \include{Chapters/genetic_drift}
 \include{Chapters/Molecular_evolution}
 \include{Chapters/genetic_drift_pop_structure}
