updated release pdf

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,17 @@
   publisher={Routledge}
 }
 
+@article{faith1999evidence,
+  title={Evidence for independent genetic influences on fat mass and body mass index in a pediatric twin sample},
+  author={Faith, Myles S and Pietrobelli, Angelo and Nunez, Christopher and Heo, Moonseong and Heymsfield, Steven B and Allison, David B},
+  journal={Pediatrics},
+  volume={104},
+  number={1},
+  pages={61--67},
+  year={1999},
+  publisher={Am Acad Pediatrics}
+}
+
 @article{klinka2009adaptive,
   title={Adaptive coat colour polymorphism in the Kermode bear of coastal British Columbia},
   author={Klinka, Dan R and Reimchen, Thomas E},
