--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,17 @@
   publisher={Routledge}
 }
 
+@article{smith1979heritability,
+  title={Heritability of some morphological characters in a song sparrow population},
+  author={Smith, James NM and Zach, Reto},
+  journal={Evolution},
+  volume={33},
+  number={1Part2},
+  pages={460--467},
+  year={1979},
+  publisher={Wiley Online Library}
+}
+
 @article{faith1999evidence,
   title={Evidence for independent genetic influences on fat mass and body mass index in a pediatric twin sample},
   author={Faith, Myles S and Pietrobelli, Angelo and Nunez, Christopher and Heo, Moonseong and Heymsfield, Steven B and Allison, David B},
