--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -74,6 +74,10 @@
 \newcommand{\BHLNC}[3]{\newline \noindent \tiny{#1 Image from the \href{#2}{Biodiversity Heritage Library}. Contributed by #3. Not in copyright.}}
 \newcommand{\IANC}[3]{\newline \noindent \tiny{#1 Image from the \href{#2}{Internet Archive}. Contributed by #3. No known copyright restrictions.}}
 
+\newcommand{\wikimedia}[4]{\newline \noindent \tiny{#1 Image from
+    \href{#2}{wikimedia} contributed by #3. #4 }}  %%use #4 slot for
+                                %%public domain etc
+
 
 \newcommand{\gitcode}[1]{Code \href{#1}{here}.}
 \newcommand{\PLOSccBY}{{licensed under CC BY 4.0}}
