--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,15 @@
   publisher={Routledge}
 }
 
+@article{smith1980experimental,
+  title={Experimental confirmation of heritable morphological variation in a natural population of song sparrows},
+  author={Smith, James NM and Dhondt, Andr{\'e} A},
+  journal={Evolution},
+  pages={1155--1158},
+  year={1980},
+  publisher={JSTOR}
+}
+
 @article{welch2014multivariate,
   title={A multivariate analysis of genetic variation in the advertisement call of the gray treefrog, Hyla versicolor},
   author={Welch, Allison M and Smith, Michael J and Gerhardt, H Carl},
