updated release pdfs

--- a/math_background/Math-background.tex
+++ b/math_background/Math-background.tex
@@ -616,7 +616,7 @@ a heart and $b$ it being any other suit. So $XY=1$ if our card is a
 Queen or Jack of Hearts, and zero otherwise. Then
 \begin{eqnarray}
   \E[XY] - \E[X]\E[Y] &= \P(X=A,~Y=B) -  \P(X=A) \P(Y=B)
-                        & p_{AB} - p_{A} p_{B} \label{eqn:binary_covar}
+                        & p_{AB} - p_{A} p_{B} \nonumber\\ \label{eqn:binary_covar}
  \end{eqnarray}
 where $p_{AB}$ is the frequency of $AB$, eg. the proportion of cards
 that are the Queen or Jack of hearts in our deck, and $p_{A}$ is the
