--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -35,6 +35,9 @@
 %\usepackage{lineno}  %%line numbering
 
 
+
+%\usepackage{slashbox}  %for diagonal slash table https://tex.stackexchange.com/questions/27193/latex-table-cell-with-a-diagonal-line-and-2-sub-cells
+
 \newcommand{\ec}[1]{{\em \color{blue} #1}}
 
 \newcommand{\gc}[1]{{\color{green} #1}}  %\color{black} #1}}   %
