added links to popgen shiny to REAMDE

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,56 @@
+@article{martin1978decay,
+  title={Decay of Douglas-fir by Sparassis radicata in Arizona},
+  author={Martin, KJ and Gilbertson, RL},
+  journal={Phytopathology},
+  volume={68},
+  pages={149--154},
+  year={1978}
+}
+
+@article{james2015mushrooms,
+  title={Why mushrooms have evolved to be so promiscuous: Insights from evolutionary and ecological patterns},
+  author={James, Timothy Y},
+  journal={Fungal biology reviews},
+  volume={29},
+  number={3-4},
+  pages={167--178},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{lowther1961polymorphism,
+  title={Polymorphism in the white-throated sparrow, Zonotrichia albicollis (Gmelin)},
+  author={Lowther, James K},
+  journal={Canadian Journal of Zoology},
+  volume={39},
+  number={3},
+  pages={281--292},
+  year={1961},
+  publisher={NRC Research Press}
+}
+
+@article{merrill2019genetic,
+  title={Genetic dissection of assortative mating behavior},
+  author={Merrill, Richard M and Rastas, Pasi and Martin, Simon H and Melo, Maria C and Barker, Sarah and Davey, John and McMillan, W Owen and Jiggins, Chris D},
+  journal={PLoS biology},
+  volume={17},
+  number={2},
+  year={2019},
+  publisher={Public Library of Science}
+}
+
+@article{tuttle2016divergence,
+  title={Divergence and functional degradation of a sex chromosome-like supergene},
+  author={Tuttle, Elaina M and Bergland, Alan O and Korody, Marisa L and Brewer, Michael S and Newhouse, Daniel J and Minx, Patrick and Stager, Maria and Betuel, Adam and Cheviron, Zachary A and Warren, Wesley C and others},
+  journal={Current Biology},
+  volume={26},
+  number={3},
+  pages={344--350},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
 @incollection{smith1971origin,
   title={The origin and maintenance of sex},
   author={Smith, J Maynard},
