--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,62 @@
   year={1978}
 }
 
+@article{axelrod1981evolution,
+  title={The evolution of cooperation},
+  author={Axelrod, Robert and Hamilton, William Donald},
+  journal={science},
+  volume={211},
+  number={4489},
+  pages={1390--1396},
+  year={1981},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{wilkinson1984reciprocal,
+  title={Reciprocal food sharing in the vampire bat},
+  author={Wilkinson, Gerald S},
+  journal={Nature},
+  volume={308},
+  number={5955},
+  pages={181--184},
+  year={1984},
+  publisher={Springer}
+}
+
+@article{queller2011expanded,
+  title={Expanded social fitness and Hamilton's rule for kin, kith, and kind},
+  author={Queller, David C},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={108},
+  number={Supplement 2},
+  pages={10792--10799},
+  year={2011},
+  publisher={National Acad Sciences}
+}
+
+
+@article{carter2013food,
+  title={Food sharing in vampire bats: reciprocal help predicts donations more than relatedness or harassment},
+  author={Carter, Gerald G and Wilkinson, Gerald S},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={280},
+  number={1753},
+  pages={20122573},
+  year={2013},
+  publisher={The Royal Society}
+}
+
+@article{trivers1971evolution,
+  title={The evolution of reciprocal altruism},
+  author={Trivers, Robert L},
+  journal={The Quarterly review of biology},
+  volume={46},
+  number={1},
+  pages={35--57},
+  year={1971},
+  publisher={Stony Brook Foundation, Inc.}
+}
+
 @article{james2015mushrooms,
   title={Why mushrooms have evolved to be so promiscuous: Insights from evolutionary and ecological patterns},
   author={James, Timothy Y},
